--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@supabase/supabase-js": "^2.39.7",
     "metalyzer": "^1.0.13",
     "nanoid": "^5.0.6",
+    "ngx-translate": "^0.0.1-security",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
