--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,56 @@
-name: Portfolio Deployment
+# Workflow name
+name: Continuous Deployment
 
+# This allows manual start of the pipeline as needed.
 on:
   push:
     branches:
-    - master
+      - master
 
+# The list of jobs to run
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    name: Build and Deploy Job
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+      # 1. Configure AWS credentials
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+      # 2. Checkout Repository
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          ref: main
 
-    - name: Deploy static site to S3 bucket
-      run: aws s3 sync . s3://ordering-0.2 --delete
+      # 3. Setup Node
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.11.0"
+
+      # 4. Setup Cache
+      - name: Setup Cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      # 5. Build Angular
+      - name: Build Angular Application
+        run: |
+          ls
+          npm install -g @angular/cli
+          npm install
+          ng build
+
+      # 6. Copy to S3 bucket.
+      - name: Copy to S3 Bucket
+        run: |
+          aws s3 cp ./dist/* s3://ordering-0.2
