--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,4 @@ jobs:
 
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./dist/ordering s3://ordering-0.2 --delete
+        run: aws s3 sync ./dist/ordering/browser s3://ordering-0.2 --delete
