--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.2.0",
     "@angular/material": "^17.2.1",
     "@angular/platform-browser": "^17.2.0",
@@ -23,13 +24,17 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@supabase/supabase-js": "^2.39.7",
+    "apollo-angular": "^6.0.0",
+    "firebase": "^10.8.1",
     "metalyzer": "^1.0.13",
     "nanoid": "^5.0.6",
     "ngx-translate": "^0.0.1-security",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.1",
