--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "@mui/styles": "^5.15.12",
     "@mui/x-data-grid-generator": "^6.18.7",
     "@mui/x-data-grid-pro": "^6.18.7",
     "@mui/x-date-pickers-pro": "^6.19.0",
