feat: upload widhget

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.9",
+    "@app-masters/react-cloudinary-uploader": "^0.1.42",
     "@aws-sdk/client-s3": "^3.490.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -26,6 +27,8 @@
     "@ngneat/falso": "^7.1.1",
     "@tauri-apps/api": "^1.5.2",
     "@types/node": "^20.11.0",
+    "axios": "^1.6.7",
+    "cloudinary-react": "^1.8.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
@@ -36,6 +39,7 @@
     "metalyzer": "^1.0.13",
     "mousetrap": "^1.6.5",
     "react": "^18.2.0",
+    "react-cloudinary-upload-widget": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
