--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.9",
     "@app-masters/react-cloudinary-uploader": "^0.1.42",
     "@aws-sdk/client-s3": "^3.490.0",
     "@emotion/react": "^11.11.3",
@@ -25,6 +24,7 @@
     "@mui/x-data-grid-pro": "^6.18.7",
     "@mui/x-date-pickers-pro": "^6.19.0",
     "@ngneat/falso": "^7.1.1",
+    "@tanstack/react-query": "^5.28.0",
     "@tauri-apps/api": "^1.5.2",
     "@types/node": "^20.11.0",
     "axios": "^1.6.7",
