--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
   },
   "dependencies": {
     "@app-masters/react-cloudinary-uploader": "^0.1.42",
-    "@aws-sdk/client-s3": "^3.490.0",
+    "@aws-sdk/client-s3": "^3.537.0",
     "@clerk/clerk-react": "^4.30.7",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@hookform/devtools": "^4.3.1",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/icons-material": "^5.15.4",
-    "@mui/material": "^5.15.4",
-    "@mui/styles": "^5.15.12",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "@mui/styles": "^5.15.14",
     "@mui/x-charts": "^6.19.8",
-    "@mui/x-data-grid-generator": "^6.18.7",
-    "@mui/x-data-grid-pro": "^6.18.7",
-    "@mui/x-date-pickers-pro": "^6.19.0",
-    "@ngneat/falso": "^7.1.1",
-    "@tanstack/react-query": "^5.28.0",
-    "@tauri-apps/api": "^1.5.2",
-    "@types/node": "^20.11.0",
-    "axios": "^1.6.7",
+    "@mui/x-data-grid-generator": "^6.19.8",
+    "@mui/x-data-grid-pro": "^6.19.8",
+    "@mui/x-date-pickers-pro": "^6.19.8",
+    "@ngneat/falso": "^7.2.0",
+    "@tanstack/react-query": "^5.28.6",
+    "@tauri-apps/api": "^1.5.3",
+    "@types/node": "^20.11.30",
+    "axios": "^1.6.8",
     "cloudinary-react": "^1.8.1",
-    "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
-    "firebase": "^10.7.1",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.9.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "i18next": "^23.7.16",
+    "i18next": "^23.10.1",
     "lodash": "^4.17.21",
     "metalyzer": "^1.0.13",
     "mousetrap": "^1.6.5",
@@ -46,15 +46,15 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
-    "react-filerobot-image-editor": "^4.7.0",
-    "react-hook-form": "^7.49.3",
-    "react-i18next": "^13.5.0",
+    "react-filerobot-image-editor": "^4.7.1",
+    "react-hook-form": "^7.51.1",
+    "react-i18next": "^14.1.0",
     "react-lazily": "^0.9.2",
-    "react-number-format": "^5.3.1",
-    "react-pro-sidebar": "1.1.0-alpha.1",
-    "react-router-dom": "^6.21.2",
+    "react-number-format": "^5.3.4",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^6.22.3",
     "react-youtube": "^10.1.0",
-    "yup": "^1.3.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.8",
@@ -75,6 +75,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "react-app-rewired": "^2.2.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
