--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Portfolio Deployment
+name: Ordering Deployment
 
 on:
   push:
@@ -41,4 +41,4 @@ jobs:
 
       # Deploy static site to S3 bucket
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./build/ s3://ordering-0.2 --delete
+        run: aws s3 sync ./dist/ s3://ordering-0.2 --delete
