--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.28.6",
     "@tauri-apps/api": "^1.5.3",
     "@types/node": "^20.11.30",
+    "@types/react-google-recaptcha": "^2.1.9",
     "appwrite": "^14.0.0",
     "axios": "^1.6.8",
     "cloudinary-react": "^1.8.1",
@@ -41,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.1",
     "react-i18next": "^14.1.0",
     "react-lazily": "^0.9.2",
